# AQA_Python_OpenCart

./: .gitignore  README.md
OpenCart_autotests/: Dockerfile  pyproject.toml  pytest.ini
OpenCart_autotests/config/: credentials.py
OpenCart_autotests/elements/: alert_element.py  file_manager_element.py  iframe_element.py
OpenCart_autotests/locators/: account_register_locators.py  admin_account_locators.py  alert_locators.py  (+2 more)
diplom/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
diplom/config/: credentials.py
diplom/elements/: alert_element.py  file_manager_element.py
diplom/locators/: add_address_locators.py  adding_category_locators.py  categories_locators.py  desktops_locators.py  iframe_locators.py  login_admin_locators.py  main_page_locators.py  product_card_locators.py
diplom/models/: add_voucher_response_model.py  cart_response_model.py
diplom/pages/: account_register_paige.py  add_address_page.py  adding_category_page.py  adding_product_paige.py  admin_account_page.py  base_page.py  catalog_page.py  categories_page.py  desktops_page.py  file_manager_element.py  iframe_element.py  login_admin_page.py  main_page.py  my_account_page.py  page_factory.py  product_card_page.py
diplom/src/: test_data.py
diplom/tests/: conftest.py
diplom/tests/api_tests/: conftest_api.py  fixtures_api.py  test_add_customer.py  test_add_voucher.py  test_checkout_cart.py
diplom/tests/ui_tests/: conftest_ui.py  fixtures_ui.py  test_add_category.py  test_add_to_cart.py  test_register_account.py
diplom/utils/: docker_setup.py  logger.py
(+31 files in other folders)
